tests/spec/emit/snapshots/array_inequality.snap
---
source: tests/spec/emit/arrays.rs
description: |
  
  fn differ(a: Array<int, 2>, b: Array<int, 2>) -> bool {
    a != b
  }
---
package main

func differ(a, b [2]int) bool {
	return a != b
}
