tests/spec/emit/snapshots/array_length.snap
---
source: tests/spec/emit/arrays.rs
description: "\nfn count(xs: Array<int, 3>) -> int {\n  xs.length()\n}\n"
---
package main

func count(xs [3]int) int {
	return len(xs)
}
