tests/spec/emit/snapshots/array_new_primitive_elements_use_go_zero_fill.snap
---
source: tests/spec/emit/arrays.rs
description: "\nfn ints() -> Array<int, 3> {\n  Array.new<int, 3>()\n}\n\nfn bools() -> Array<bool, 2> {\n  Array.new<bool, 2>()\n}\n"
---
package main

func ints() [3]int {
	return [3]int{}
}

func bools() [2]bool {
	return [2]bool{}
}
